Revert "Ju 312 java 21 migration (#222)" (#223)
This reverts commit 7e41542b3c1e5f100835106d73afd4017d54dabe.